# LLM-DNA

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
configs/: huggingface_llm_list_left.jsonl
data/rand/: rand_dataset.json  rand_dataset_chinese.json
scripts/: closed_source_models.py  open_source_models.py
src/llm_dna/: api.py  cli.py
src/llm_dna/core/: extraction.py
src/llm_dna/data/: DatasetLoader.py  classical_vocab.json  generate_rand_dataset.py  generate_rand_dataset_chinese.py
src/llm_dna/dna/: EmbeddingDNAExtractor.py
src/llm_dna/models/: ModelLoader.py  ModelWrapper.py
